fix: async load failed build

--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,15 @@ body
     left: 0;
     outline: none;
 }
+
+.watermark {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    font-size: 14px;
+    pointer-events: none;
+    opacity: 0.5;
+    letter-spacing: 2px;
+}
